# HimanshuBhardwaj2398.github.io

./: .gitignore  BEFORE_AND_AFTER.md  Gemfile  LICENSE  QUICK_START.md  README_NEW_DESIGN.md  SITE_MAP.md  TRANSFORMATION_SUMMARY.md  _config.yml  about.html  about.md  archives.html  blog.md  claude.md  contact.md  cv.md  experience.md  index.html  index.md  package-lock.json  package.json  pelicanconf.py  projects.html  projects.md  publishconf.py  pyproject.toml  style.css  tags.html  tailwind.config.js
.github/workflows/: build.yml
_data/: education.yml  experience.yml  navigation.yml  projects.yml  skills.yml  theme.yml
_includes/: custom-footer-scripts.html  footer.html  head.html  nav.html  sidebar.html
_includes/sections/: about.html  contact.html  education.html  experience.html  hero.html  projects.html  skills.html
_layouts/: default.html  default_jekyll-now_backup.html  home.html  page.html
_pages/: index.html
_portfolio/: example-project.md
_sass/theme-scss/: _typography.scss  style.scss
assets/css/: custom-styles.css  main-old.css  main.css  style.css  styles.css
assets/js/: main.js  mode-toggler.js
assets/js/modules/: animations.js  canvas.js  effects.js  navigation.js
assets/scss/: style.scss
content/pages/: 01-About.md  02-Projects.md  03-Experience.md  04-Contact.md
output/: archives.html  authors.html  categories.html  index.html  tags.html
pages/: about.html  about.md  cv.md  projects.md
