[project]
name = "himanshubhardwaj2398-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "Himanshu2398",email = "himanshubhardwaj2398@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pelican (>=4.11.0,<5.0.0)",
    "markdown (>=3.7,<4.0)",
    "ghp-import (>=2.1.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "himanshubhardwaj2398"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
